# fileagent-server

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  FileAgent_Server_需求文档.md  PROJECT_INTRODUCE.md  config.yaml  docker-compose.yml  docker-entrypoint.sh  nginx.conf  vcpkg.json  优化总结.md
.claude/: settings.local.json.tmp.861259.9465a103d424
cmake/: FindJsoncpp.cmake
scripts/: migrate_to_fastdfs.sh
sql/: init.sql
src/: main.cpp
src/agent/: AgentEngine.cpp  AgentEngine.h
src/common/: CacheInterface.h  CacheManager.cpp  CacheManager.h  Config.h  ConfigLoader.cpp  ConfigLoader.h  FastDfsClient.cpp  FastDfsClient.h  Hash.cpp  Hash.h  Logger.h  LruCache.h  RateLimiter.h  RedisCache.cpp  RedisCache.h  Sha256.cpp  Sha256.h  StringUtil.h  TextExtractor.cpp  TextExtractor.h  Types.h
src/dao/: FileDao.cpp  FileDao.h  Models.h  SessionDao.cpp  SessionDao.h  ShareDao.cpp  ShareDao.h  UserDao.cpp  UserDao.h
src/db/: ConnectionPool.cpp  ConnectionPool.h  MysqlConn.cpp  MysqlConn.h  PreparedStatement.cpp  PreparedStatement.h
src/server/: AuthMiddleware.cpp  AuthMiddleware.h  FastCgiServer.cpp  FastCgiServer.h  HttpContext.h  HttpServer.h
src/service/: AuthService.cpp  AuthService.h  ChunkUploadService.cpp  ChunkUploadService.h  FileService.cpp  FileService.h  LlmService.cpp  LlmService.h  ServiceTypes.h  ShareService.cpp  ShareService.h
src/vector/: TextChunker.cpp  TextChunker.h  VectorStore.cpp  VectorStore.h
tests/: test_text_chunker.cpp  test_text_extractor.cpp  test_vector_store.cpp
web/: index.html
web/css/: style.css
web/js/: api.js
